--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Cronograma</title>
+    <title>Savio Castelo</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body></body>
