--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+    <head>
     <meta charset="UTF-8">
     <title>Savio Castelo</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-</head>
-<body></body>
+    </head>
+    <style>
+        .links {margin: auto;}
+    </style>
+    <body>
+        <div class="links">
+            <a href="https://savio591.github.com/cronograma">cronograma</a>
+            <a href="https://savio591.github.com/portfolio">portfolio</a>
+        </div>
+    </body>
