--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <style>
-        .links {margin: auto;}
+        .links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 200px;
+            border: 3px solid green;
+        }
     </style>
     <body>
         <div class="links">
