--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
             justify-content: center;
             align-items: center;
             height: 200px;
-            border: 3px solid green;
+        }
+        
+        .cronograma {
+            padding: 8px;
+        }
+        
+        .portfolio {
+            padding: 8px;
         }
     </style>
     <body>
         <div class="links">
-            <a href="https://savio591.github.com/cronograma">cronograma</a>
-            <a href="https://savio591.github.com/portfolio">portfolio</a>
+            <a class="cronograma" href="https://savio591.github.com/cronograma">cronograma</a>
+            <a class="portfolio" href="https://savio591.github.com/portfolio">portfolio</a>
         </div>
     </body>
