--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <style>
+        body {
+              background-color: #181a1b;
+            color: #e8e6e3;
+        }
         .links {
             display: flex;
             justify-content: center;
