--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <title>Savio Castelo</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     </head>
     <style>
         body {
-              background-color: #181a1b;
+            background-color: #181a1b;
             color: #e8e6e3;
+			font-family: 'Alfa Slab One', cursive;
         }
+		.titulo {
+			margin: auto;
+			text-align: center;
+			font-size: 72px;
+		}
         .links {
             display: flex;
             justify-content: center;
@@ -18,14 +25,22 @@
         }
         
         .cronograma {
-            padding: 8px;
+            padding: 32px;
         }
         
         .portfolio {
-            padding: 8px;
+            padding: 32px;
         }
+		
+		a {
+		color: #e8e6e3;
+		font-size: 48px;
+		}
     </style>
     <body>
+		<div class="titulo">
+			<h1>SAVIL<h1>
+		</div>
         <div class="links">
             <a class="cronograma" href="https://savio591.github.com/cronograma">cronograma</a>
             <a class="portfolio" href="https://savio591.github.com/portfolio">portfolio</a>
