--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 22 years old .-. - savio591" /><meta property="profile:username" content="savio591" />
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Buenard:wght@700&display=swap" rel="stylesheet">
+
     </head>
     <style>
         body {
@@ -23,7 +25,9 @@
 		.titulo {
 			margin: auto;
 			text-align: center;
-			font-size: 72px;
+			font-size: 48px;
+			font-family: Buenard, 'Alfa Slab One'
+
 		}
         .links {
             display: flex;
@@ -47,10 +51,10 @@
     </style>
     <body>
 		<div class="titulo">
-			<h1>SAVIL<h1>
+			<h1>SAVIL EXPERIMENTS<h1>
 		</div>
         <div class="links">
-            <a class="cronograma" href="https://savio591.github.com/cronograma">cronograma</a>
-            <a class="portfolio" href="https://savio591.github.com/portfolio">portfolio</a>
+            <a class="cronograma" href="https://savio591.github.io/cronograma">cronograma</a>
+            <a class="portfolio" href="https://savio591.github.io/portfolio">portfolio</a>
         </div>
     </body>
