metaa title added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
     <meta charset="UTF-8">
-    <title>Savio Castelo</title>
+    <title>Savil Experiments</title>
 	<meta name="description" content="Product, Graphic and Sound Design Student.
 22 years old .-. - savio591">
 	<meta property="fb:app_id" content="1401488693436528">
