--- a/index.html
+++ b/index.html
@@ -2,16 +2,31 @@
 <html lang="pt-br">
     <head>
     <meta charset="UTF-8">
-    <title>Savil Experiments</title>
-	<meta name="description" content="Product, Graphic and Sound Design Student.
-22 years old .-. - savio591">
-	<meta property="fb:app_id" content="1401488693436528">
-	<meta name="apple-itunes-app" content="app-id=1477376905">
-	<meta name="twitter:image:src" content="https://avatars3.githubusercontent.com/u/3879613?s=400&amp;u=2117b6ed8a7dc87512f025d3158995fcc18aa0a6&amp;v=4" /><meta name="twitter:site" content="@github" /><meta name="twitter:card" content="summary" /><meta name="twitter:title" content="savio591 - Overview" /><meta name="twitter:description" content="Product, Graphic and Sound Design Student.
-22 years old .-. - savio591" />
-    <meta property="og:image" content="https://avatars3.githubusercontent.com/u/3879613?s=400&amp;u=2117b6ed8a7dc87512f025d3158995fcc18aa0a6&amp;v=4" /><meta property="og:site_name" content="GitHub" /><meta property="og:type" content="profile" /><meta property="og:title" content="savio591 - Overview" /><meta property="og:url" content="https://github.com/savio591" /><meta property="og:description" content="Product, Graphic and Sound Design Student.
-22 years old .-. - savio591" /><meta property="profile:username" content="savio591" />
+	
+	<!-- Primary Meta Tags -->
+	<title>Savil Experiments - Home</title>
+	<meta name="title" content="Savil Experiments - Home">
+	<meta name="description" content="Product, Graphic and Sound Design Student. 22 years old .-.
+	">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://savio591.github.io">
+	<meta property="og:title" content="Savil Experiments - Home">
+	<meta property="og:description" content="Product, Graphic and Sound Design Student. 22 years old .-.
+	">
+	<meta property="og:image" content="./index.jpg">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://savio591.github.io">
+	<meta property="twitter:title" content="Savil Experiments - Home">
+	<meta property="twitter:description" content="Product, Graphic and Sound Design Student. 22 years old .-.">
+	<meta property="twitter:image" content="./index.jpg">
+	
+	
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+		
 	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Buenard:wght@700&display=swap" rel="stylesheet">
 
