metadata fix fix fix again

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	<meta property="og:title" content="Savil Experiments - Home">
 	<meta property="og:description" content="Product, Graphic and Sound Design Student. 22 years old .-.
 	">
-	<meta property="og:image" content="./index.jpg">
+	<meta property="og:image" content="https://savio591.github.io/index.jpg">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://savio591.github.io">
 	<meta property="twitter:title" content="Savil Experiments - Home">
 	<meta property="twitter:description" content="Product, Graphic and Sound Design Student. 22 years old .-.">
-	<meta property="twitter:image" content="./index.jpg">
+	<meta property="twitter:image" content="https://savio591.github.io/index.jpg">
 	
 	
     <link rel="stylesheet" type="text/css" href="./css/index.css">
