--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
+<html lang="pt-br"><head>
     <meta charset="UTF-8">
 	
 	<!-- Primary Meta Tags -->
@@ -31,45 +30,12 @@
 	<link href="https://fonts.googleapis.com/css2?family=Buenard:wght@700&display=swap" rel="stylesheet">
 
     </head>
-    <style>
-        body {
-            background-color: #181a1b;
-            color: #e8e6e3;
-			font-family: 'Alfa Slab One', cursive;
-        }
-		.titulo {
-			margin: auto;
-			text-align: center;
-			font-size: 48px;
-			font-family: Buenard, 'Alfa Slab One'
-
-		}
-        .links {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 200px;
-        }
-        
-        .cronograma {
-            padding: 32px;
-        }
-        
-        .portfolio {
-            padding: 32px;
-        }
-		
-		a {
-		color: #e8e6e3;
-		font-size: 48px;
-		}
-    </style>
     <body>
 		<div class="titulo">
-			<h1>SAVIL EXPERIMENTS<h1>
+			<h1>SAVIL EXPERIMENTS</h1>
 		</div>
-        <div class="links">
-            <a class="cronograma" href="https://savio591.github.io/cronograma">cronograma</a>
+        <div class="links"><a href="#" class="estudos_python">estudos python&nbsp;</a><a class="cronograma" href="https://savio591.github.io/cronograma">cronograma</a>
             <a class="portfolio" href="https://savio591.github.io/portfolio">portfolio</a>
         </div>
     </body>
+</html>
