--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-br"><head>
+<html lang="pt-br">
+<head>
     <meta charset="UTF-8">
-	
-	<!-- Primary Meta Tags -->
-	<title>Savil Experiments - Home</title>
-	<meta name="title" content="Savil Experiments - Home">
-	<meta name="description" content="Product, Graphic and Sound Design Student. 22 years old .-.
-	">
-
-	<!-- Open Graph / Facebook -->
+    <title></title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<!-- Provide a short description of the page. -->
+	<meta name="description" content="Loja de roupas femininas">
+	<!-- Open Graph Meta Tags -->
+	<!-- Set the canonical URL for the page you are sharing. -->
+	<meta property="og:url" content="http://savio591.github.io/girassolboutique">
+	<!-- The title to accompany the URL. -->
+	<meta property="og:title" content="Girassol Boutique - Roupas femininas"/>
+	<!-- Provides Facebook the name that you would like your website to be recognized by. -->
+	<meta property="og:site_name" content="Girassol Boutique - Roupas femininas">
+	<!-- Provides Facebook the type of website that you would like your website to be categorized by. -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://savio591.github.io">
-	<meta property="og:title" content="Savil Experiments - Home">
-	<meta property="og:description" content="Product, Graphic and Sound Design Student. 22 years old .-.
-	">
-	<meta property="og:image" content="https://savio591.github.io/index.jpg">
+	<!-- Defines the language, American English is the default. -->
+	<meta property="og:locale" content="pt-br">
+	<!-- Directs Facebook to use the specified image when the page is shared. -->
+	<meta property="og:image" content="https://savio591.github.io/girassolboutique/logo_seo.jpg">
+	<!-- Similar to the meta description tag in HTML. This description is shown below the link title on Facebook. -->
+	<meta property="og:description" content="Loja de roupas femininas"/>
 
-	<!-- Twitter -->
-	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://savio591.github.io">
-	<meta property="twitter:title" content="Savil Experiments - Home">
-	<meta property="twitter:description" content="Product, Graphic and Sound Design Student. 22 years old .-.">
-	<meta property="twitter:image" content="https://savio591.github.io/index.jpg">
+	<!-- Twitter Card data -->
+	<!-- The type of card to be created: summary, photo, or video -->
+	<meta name="twitter:card" content="summary" />
+	<!-- Title of the Twitter Card -->
+	<meta name="twitter:title" content="Girassol Boutique - Roupas Femininas" />
+	<!-- Description of content -->
+	<meta name="twitter:description" content="O melhor dos looks e roupas do Brasil!" />
+	<!-- URL of image to use in the card. Used with summary, summary_large_image, player cards -->
+<meta name="twitter:image" content="https://savio591.github.io/girassolboutique/logo_seo.jpg" />
 	
-	
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
-		
-	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Buenard:wght@700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./css/index.css">
 
-    </head>
-    <body>
-		<div class="titulo">
-			<h1>SAVIL EXPERIMENTS</h1>
+</head>
+<body>
+	<header>
+		<div class="bl_logo">
+			<a href="#">
+				<img class="bl_imagem" src="img/logo_header.png" width="125" height="128" alt="logo"/>
+				<img class="bl_nome" src="img/logo_nome.svg" alt="Girassol Boutique"/>
+			</a>			
 		</div>
-        <div class="links"><a href="#" class="estudos_python">estudos python&nbsp;</a><a class="cronograma" href="https://savio591.github.io/cronograma">cronograma</a>
-            <a class="portfolio" href="https://savio591.github.io/portfolio">portfolio</a>
-        </div>
-    </body>
+	<nav class="bl_nav">
+  		<ul>
+			<li><a href="#"><span>Sobre</span></a></li>
+			<li><a href="#"><span>Contato</span></a></li>
+			<li><a href="#"><span>Trabalhe Conosco</span></a></li>
+	  </ul>
+	</nav>
+</header>
+</body>
 </html>
