boutique header fix

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -36,18 +36,13 @@
 
 </head>
 <body>
-	<header>
-		<div class="bl_logo">
-			<a href="#">
-				<img class="bl_imagem" src="img/logo_header.png" width="125" height="128" alt="logo"/>
-				<img class="bl_nome" src="img/logo_nome.svg" alt="Girassol Boutique"/>
-			</a>			
-		</div>
+<header>
+		<img class="logo" src="img/logo.svg" alt="Girassol Boutique"/>
 	<nav class="bl_nav">
   		<ul>
-			<li><a href="#"><span>Sobre</span></a></li>
-			<li><a href="#"><span>Contato</span></a></li>
-			<li><a href="#"><span>Trabalhe Conosco</span></a></li>
+			<li><span>Trabalhe Conosco</span></li>
+			<li><span>Contato  |</span></li>
+			<li><span>Sobre  |</span></li>
 	  </ul>
 	</nav>
 </header>
