ct_principal added

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -46,5 +46,19 @@
 	  </ul>
 	</nav>
 </header>
+<main class="ct_principal">
+	<picture>
+	 <source srcset="./img/ct_principal_grid.png">
+	 <img src="./img/ct_principal_grid.png" alt="fotos de vestidos">
+	</picture>
+	<div class="ct_principal_textos">
+		<h3 class="ct_principal_texto1">Looks e roupas femininas</h3>
+		<h3 class="ct_principal_texto2">a Partir de R$ 14,99</h3>
+		<h3 class="ct_principal_texto3">seja à vista, boleto e cartão de crédito!</h3>
+	</div>
+</main>
+<main class="ct_vestidos">
+
+</main>
 </body>
 </html>
