--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		</div>
         <div class="links"><a href="#" class="estudos_python">estudos python&nbsp;</a><a class="cronograma" href="https://savio591.github.io/cronograma">cronograma</a>
             <a class="portfolio" href="https://savio591.github.io/portfolio">portfolio</a>
+			<a class="girassol">Girassol Boutique</a>
         </div>
     </body>
 </html>
