responsive modee added v2

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Girassol Boutique - Roupas Femininas</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#ff0066" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<!-- Provide a short description of the page. -->
@@ -37,7 +38,7 @@
 </head>
 <body>
 <header>
-	<img class="logo" src="img/logo.svg" alt="Girassol Boutique"/>
+	<img onclick="location='https://savio591.github.io/girassolboutique'" class="logo" src="img/logo.svg" alt="Girassol Boutique"/>
 	<nav class="bl_nav">
   		<ul>
 			<li><span>Trabalhe Conosco</span></li>
