responsive modee added v4

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -59,7 +59,10 @@
 	</div>
 </main>
 <main class="ct_vestidos">
-
+		<div class="titulo"></div>
+	<div class="ct_vestidos_bl_texto">
+		<h3 class="ct_vestidos_texto">Os Melhores Looks</h3>
+	</div>
 </main>
 </body>
 </html>
