responsive modee added v5

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -49,7 +49,8 @@
 </header>
 <main class="ct_principal">
 	<picture>
-	 <source srcset="./img/ct_principal_grid.png">
+	 <source media="(min-width:650px)" srcset="./img/ct_principal_grid.png">
+		<source media="(max-width:649px)" srcset="./img/ct_principal_grid_mobile.png">
 	 <img src="./img/ct_principal_grid.png" alt="fotos de vestidos">
 	</picture>
 	<div class="ct_principal_textos">
