responsive modee added v6

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <header>
-	<img onclick="location='https://savio591.github.io/girassolboutique'" class="logo" src="img/logo.svg" alt="Girassol Boutique"/>
+	<img onclick="location='https://savio591.github.io/girassolboutique'" class="logo" src="img/logo.svg" type="image/svg+xml" alt="Girassol Boutique"/>
 	<nav class="bl_nav">
   		<ul>
 			<li><span>Trabalhe Conosco</span></li>
@@ -60,7 +60,6 @@
 	</div>
 </main>
 <main class="ct_vestidos">
-		<div class="titulo"></div>
 	<div class="ct_vestidos_bl_texto">
 		<h3 class="ct_vestidos_texto">Os Melhores Looks</h3>
 	</div>
