--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -36,6 +36,36 @@
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
+<style>
+	@media (max-width: 1200px) {
+  #looks_grid {
+  -moz-column-count:    4;
+  -webkit-column-count: 4;
+  column-count:         4;
+  }
+}
+@media (max-width: 1000px) {
+  #looks_grid {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 800px) {
+  #looks_grid {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+}
+@media (max-width: 400px) {
+  #looks_grid {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+  column-count:         1;
+  }
+}
+</style>
 <body>
 <header>
 	<img onclick="location='https://savio591.github.io/girassolboutique'" class="logo" src="img/logo.svg" type="image/svg+xml" alt="Girassol Boutique"/>
@@ -63,6 +93,10 @@
 	<div class="ct_vestidos_bl_texto">
 		<h3 class="ct_vestidos_texto">Os Melhores Looks</h3>
 	</div>
+	<section class="looks_grid" id="looks_grid">
+	  <img src="./img/1.jpg" alt="Oi">
+	  <img src="./img/2.jpg" alt="kkkk">
+</section>
 </main>
 </body>
 </html>
