ct_looks_grids added v3

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <header>
-	<img onclick="location='https://savio591.github.io/girassolboutique'" class="logo" src="img/logo.svg" type="image/svg+xml" alt="Girassol Boutique"/>
+	<img onclick="location='https://savio591.github.io/girassolboutique'" class="logo" src="img/logo.svg" alt="Girassol Boutique"/>
 	<nav class="bl_nav">
   		<ul>
 			<li><span>Trabalhe Conosco</span></li>
@@ -65,13 +65,29 @@
 		<h3 class="ct_vestidos_texto">Os Melhores Looks</h3>
 	</div>
 	<section class="looks_grid" id="looks_grid" onclick="alert('Um novo e-Commerce está em construção! A loja estará disponível em breve!')">
-		<img src="./img/melhores_looks/1.png" alt="Oi">
-		<img src="./img/melhores_looks/2.jpg" alt="kkkk">
-		<img src="./img/melhores_looks/3.jpg" alt="Oi">
-		<img src="./img/melhores_looks/4.jpg" alt="Oi">
-		<img src="./img/melhores_looks/5.jpg" alt="Oi">
-		<img src="./img/melhores_looks/6.jpg" alt="Oi">
-		<img src="./img/melhores_looks/7.jpg" alt="Oi">
+		<div>
+			<img src="./img/melhores_looks/1.png" alt="Oi">
+			<h4>Teste Dessa roupa kkk</h4>
+			<h5>R$ 14,90</h5>
+		</div>
+		<div>
+			<img src="./img/melhores_looks/2.jpg" alt="kkkk">
+		</div>
+		<div>
+			<img src="./img/melhores_looks/3.jpg" alt="Oi">
+		</div>
+		<div>
+			<img src="./img/melhores_looks/4.jpg" alt="Oi">
+		</div>
+		<div>
+			<img src="./img/melhores_looks/5.jpg" alt="Oi">
+		</div>
+		<div>
+			<img src="./img/melhores_looks/6.jpg" alt="Oi">
+		</div>
+		<div>
+			<img src="./img/melhores_looks/7.jpg" alt="Oi">
+		</div>
 </section>
 </main>
 </body>
