ct_looks_responsive v3

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Girassol Boutique - Roupas Femininas</title>
+	<link rel="icon" type="image/png" href="chrome://branding/content/icon32.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#ff0066" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -66,27 +67,40 @@
 	</div>
 	<section class="looks_grid" id="looks_grid" onclick="alert('Um novo e-Commerce está em construção! A loja estará disponível em breve!')">
 		<div>
-			<img src="./img/melhores_looks/1.png" alt="Oi">
-			<h4>Teste Dessa roupa kkk</h4>
+			<img src="./img/melhores_looks/1.png" alt="1">
+			<h4>Conjunto Listrado + Bota</h4>
+			<h5>R$ 24,90</h5>
+		</div>
+		<div>
+			<img src="./img/melhores_looks/2.jpg" alt="2">
+			<h4>Look Glamurosa</h4>
 			<h5>R$ 14,90</h5>
 		</div>
 		<div>
-			<img src="./img/melhores_looks/2.jpg" alt="kkkk">
+			<img src="./img/melhores_looks/3.jpg" alt="3">
+			<h4>Vestido Princesa</h4>
+			<h5>R$ 14,90</h5>
 		</div>
 		<div>
-			<img src="./img/melhores_looks/3.jpg" alt="Oi">
+			<img src="./img/melhores_looks/4.jpg" alt="4">
+			<h4>Conjunto Rainbow</h4>
+			<h5>R$ 18,90</h5>
 		</div>
 		<div>
-			<img src="./img/melhores_looks/4.jpg" alt="Oi">
+			<img src="./img/melhores_looks/5.jpg" alt="5">
+			<h4>Look Casual</h4>
+			<h5>R$ 16,90</h5>
 		</div>
 		<div>
-			<img src="./img/melhores_looks/5.jpg" alt="Oi">
+			<img src="./img/melhores_looks/6.jpg" alt="6">
+			<h4>Conjunto Jeans</h4>
+			<h5>R$ 18,90</h5>
+
 		</div>
 		<div>
-			<img src="./img/melhores_looks/6.jpg" alt="Oi">
-		</div>
-		<div>
-			<img src="./img/melhores_looks/7.jpg" alt="Oi">
+			<img src="./img/melhores_looks/7.jpg" alt="7">
+			<h4>Body Tule Oncinha</h4>
+			<h5>R$ 16,90</h5>
 		</div>
 </section>
 </main>
