--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Girassol Boutique - Roupas Femininas</title>
-	<link rel="icon" type="image/png" href="chrome://branding/content/icon32.png">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./favicon.ico" type="image/x-icon">	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#ff0066" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<!-- Provide a short description of the page. -->
