--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -57,7 +57,7 @@
 	</picture>
 	<div class="ct_principal_textos" >
 		<h3 class="ct_principal_texto1">Looks e roupas<br>femininas</h3>
-		<h3 class="ct_principal_texto2">a Partir de<br>R$ 14,99</h3>
+		<h3 class="ct_principal_texto2">a Partir de<br>R$ 14,90</h3>
 		<h3 class="ct_principal_texto3">seja à vista, boleto e cartão de crédito!</h3>
 	</div>
 </main>
@@ -104,6 +104,9 @@
 		</div>
 </section>
 </main>
+<footer>
+	<h5>Girassol Boutique - 2020</h5>
+</footer>
 </body>
 </html>
 
