header added + responsive

--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -106,6 +106,10 @@
 </main>
 <footer>
 	<h5>Girassol Boutique - 2020</h5>
+	<div class="icons">
+		<i class="facebook"></i>
+		<i class="instagram"></i>
+	</div>
 </footer>
 </body>
 </html>
