--- a/girassolboutique/index.html
+++ b/girassolboutique/index.html
@@ -105,10 +105,19 @@
 </section>
 </main>
 <footer>
-	<h5>Girassol Boutique - 2020</h5>
-	<div class="icons">
-		<i class="facebook"></i>
-		<i class="instagram"></i>
+	<div class="footer_1">
+		<h5>Girassol Boutique - 2020</h5>
+		<div class="icons">
+			<i class="facebook"></i>
+			<i class="instagram"></i>
+		</div>
+	</div>
+	<div class="footer_2">
+		<ul>
+			<li><span>Sobre</span></li>
+			<li><span>Contato</span></li>
+			<li><span>Trabalhe Conosco</span></li>
+	  </ul>
 	</div>
 </footer>
 </body>
