Javascript Tools Added

--- a/footer.html
+++ b/footer.html
@@ -22,24 +22,11 @@
 	<meta property="twitter:title" content="Savil Experiments - Home">
 	<meta property="twitter:description" content="Product, Graphic and Sound Design Student. 22 years old .-.">
 	<meta property="twitter:image" content="https://savio591.github.io/index.jpg">
-	
-	
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
 		
 	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Buenard:wght@700&display=swap" rel="stylesheet">
 
     </head>
-    <body>
-		<div id="demo" class="titulo">
-			<h1>SAVIL EXPERIMENTS</h1>
-		</div>
-        <div class="links">
-			<a href="#" class="estudos_python">estudos python&nbsp;</a>
-			<a class="cronograma" href="https://savio591.github.io/cronograma">cronograma</a>
-            <a class="portfolio" href="https://savio591.github.io/portfolio">portfolio</a>
-			<a class="girassol" href="#">Girassol Boutique</a>
-        </div>
-		<iframe src="./footer.html" frameBorder="0" title="Footer"></iframe>
+	<body>
+	Testin
 	</body>
-</html>
