--- a/javascript_tools/index.html
+++ b/javascript_tools/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="js" lang="">
 
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,12 @@
 <body>
 
   <!-- Start of site -->
-  <div class="bloco">
+  <nav class="navbar">
+    <ul>
+      <li class="button-input_to_length" onclick="disabler()">Input to Length</li>
+    </ul>
+  </nav>
+  <div class="input_to_length">
     <h1 class="titulo">Input chars to number chars</h1>
     <h3 class="text">Insert string in the input.</h3>
     <form name="formulario">
@@ -37,7 +42,13 @@
 
   <!-- End of site -->
 
-  <!-- Javascript Starting -->
+<!-- Div Disabler -->
+  <script>
+    let divElement = document.querySelector(".input_to_length");
+    function disabler() {divElement.classList.toggle("disabler");}
+  </script>
+
+  <!-- Input to length script -->
   <script>
     function testee() {document.getElementById("output").innerHTML = document.getElementById("entrada").value.length}
   </script>
