Json section fixing problems

--- a/javascript_tools/index.html
+++ b/javascript_tools/index.html
@@ -42,7 +42,7 @@
   </div>
   <div class="json_strings disabler">
     <header>
-
+      <p>Testing Alive</p>
     </header>
 
     <section>
@@ -55,10 +55,10 @@
 <!-- Div Disabler -->
   <script>
     let divElement = document.querySelector(".input_to_length");
-    function disabler() {divElement.classList.toggle("disabler");}
+    function disabler() {divElement.classList.toggle("disabler"); console.log("tooglfrfing input_to_length section");}
 
     let divJson = document.querySelector(".json_strings");
-    function disablerJSON() {divJson.classList.toggle("disabler")}
+    function disablerJSON() {divJson.classList.toggle("disabler");console.log("toogling JSON section");}
   </script>
 
   <!-- Json Javascript use -->
