Responsive fix//Js_tools added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 			<a href="#" class="estudos_python">estudos python&nbsp;</a>
 			<a class="cronograma" href="https://savio591.github.io/cronograma">cronograma</a>
             <a class="portfolio" href="https://savio591.github.io/portfolio">portfolio</a>
-			<a class="girassol" href="#">Girassol Boutique</a>
+			<a class="girassol" href="./girassolboutique">Girassol Boutique</a>
+			<a class="js_tools" href="./javascript_tools">Javascript Tools</a>
         </div>
 		<iframe src="./footer.html" frameBorder="0" title="Footer"></iframe>
 	</body>
