--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br"><head>
     <meta charset="UTF-8">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Primary Meta Tags -->
 	<title>Savil Experiments - Home</title>
 	<meta name="title" content="Savil Experiments - Home">
