react website adicionado

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a class="portfolio" href="https://savio591.github.io/portfolio">portfolio</a>
 			<a class="girassol" href="./girassolboutique">Girassol Boutique</a>
 			<a class="js_tools" href="./javascript_tools">Javascript Tools</a>
+			<a class="react_experiments" href="./react-experiments">React Experiments</a>
         </div>
 		<iframe src="./footer.html" frameBorder="0" title="Footer"></iframe>
 	</body>
